Fixed additional contrast issues.

--- a/lesson2/styles/l2-small.css
+++ b/lesson2/styles/l2-small.css
@@ -22,7 +22,7 @@ header {
 
 header,
 footer {
-    background-color: green;
+    background-color: #007000;
     color: #e8eaed;
     text-align: center;
 }
